app/assets/stylesheets/thumbs/videos.css
.thumb {
  text-decoration: none;
}
.thumb-hidden {
  opacity: 0.3;
}
.thumb.working {
  background: #95ffd5;
  border: solid 1px #ccc !important;
  margin: -1px;
}
.tile {
  max-width: 250px;
  position: relative;
}
.tile {
  position: relative;
  width: 100%;
  max-height: 200px;
  min-height: 120px;
  padding: 0;
}
.tile, .queue .thumb .tile {
  text-align: left;
  display: inline-block;
  text-decoration: none;
  background: #000 center/cover no-repeat;
  color: #fff;
  vertical-align: top;
}
.queue .thumb .tile {
  max-width: 55%;
  margin: 5px;
}

li.generic.mix {
  background: rgba(0,0,200,0.01);
}

li.generic.mix .tile::after {
  content: '\f09e';
  font-family: 'FontAwesome';
  position: absolute;
  padding: 10px;
  top: 0;
  right: 0;
  font-size: 2em;
  opacity: 0.6;
  text-align: center;
  text-shadow: 0 0 3px #000;
}


.thumb .tile .detail {
  display: none;
}
.thumb .tile .duration {
  opacity: 0;
  position: absolute;
  padding: 1px 6px;
  right: 0;
  bottom: 0;
  color: #fff;
  background: rgba(0,0,0,0.3);
  border-radius: 5px 0 0 0;
}
.thumb .tile:hover:before {
  position: absolute;
  content: "";
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  transition: outline 0.3s ease;
  outline: solid 3px rgba(0,0,255,0.1);
}
.thumb .tile:hover .duration {
  opacity: 1;
}

.thumb .title {
  height: 3.1em;
}

.thumb .tile.link {
  background: none;
  border: solid 1px #aaa;
  text-align: center;
  line-height: 100%;
  color: #aaa;
  vertical-align: middle;
  padding-top: 25%;
}

.thumb .tile .detail, .thumb .tile .title, .thumb .tile + .title {
  max-height: 3.1em;
  overflow: hidden;
  text-overflow: ellipsis;
  -o-text-overflow: ellipsis;
}

.queue .thumb .tile .details {
  vertical-align: top;
  margin-bottom: 0 !important;
  color: #000;
  padding: 5px;
  position: absolute;
  text-align: left;
  bottom: -3.5em;
}

@media(min-width: 900px) {
  .queue .thumb .tile {
    width: 50%;
    max-width: 50%;
    min-width: 50%;
    min-height: 110px;
    float: left;
  }
  .queue .thumb .tile .details {
    width: 100%;
    left: 100%;
    bottom: auto;
  }
  .queue .details .detail {
    display: block;
    color: #aaa;
    font-weight: normal;
  }
}
@media(max-width: 900px) {
  .queue .thumb .tile {
    margin-bottom: 3.1em;
  }
  .queue .thumb .tile {
    min-width: 0 !important;
  }
  .queue .thumb .tile {
    max-width: 100% !important;
    padding: 0 0 45% 0 !important;
  }
  
  ul.horizontal > li.generic {
    max-width: 135px;
  }
  
  .tile {
    min-height: 100px;
  }
}
@media(max-width: 700px) {
  ul.horizontal > li.generic {
    max-width: 100px;
    min-width: 90px;
  }
  
  .tile {
    min-height: 80px;
  }
}

